--- a/index.html
+++ b/index.html
@@ -4,10 +4,216 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+      body {
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: 100vh;
+    font-size: 14px;
+}
+body .flex00 {
+    display: flex;
+    align-items: center;
+}
+icon {
+    opacity: 0.8;
+    display: block;
+    width: 24px;
+    height: 24px;
+    background-size: cover;
+}
+.wave-button {
+    position: relative;
+    overflow: hidden;
+}
+.wave-button .ripple {
+    position: absolute;
+    width: 90%;
+    height: 90%;
+    background: #9a9a9a62;
+    border-radius: 100%;
+    transform: scale(0);
+    animation: ripple-animation 0.6s linear infinite;
+    pointer-events: none;
+}
+    
+@keyframes ripple-animation {
+    to {
+      transform: scale(3);
+      opacity: 0;
+    }
+}
+/* -------------------------------------- */
+
+/* feedback01 */
+
+body .feedback01 {
+    display: none;
+    user-select: none;
+    position: fixed;
+    font-family: Arial;
+    color: #484f63;
+    background-color: white;
+    top: 0;
+    right: 0;
+    z-index: 100000000;
+    width: 412px;
+    height: 100%;
+    border-radius: 5px 0px 0px 5px;
+    overflow-y: auto;
+    box-shadow: 0 4px 32px -14px rgba(64, 87, 109, .3);
+}
+body .feedback01 button {
+    color: #484f63;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+body .feedback01 input,textarea,button {
+    font-family: Arial;
+    outline-color: #206bf5;
+}
+body .feedback01 hr {
+    border: none;
+    height: 1px;
+    background: #eeeff1;
+    margin-top: 30px;
+}
+body .feedback02 {
+    padding: 8px 10px;
+    padding-left: 16px;
+    height: 40px;
+    justify-content: space-between;
+    border-bottom: solid 1px #484f6617;
+}
+body .feedback03 span {
+    position: relative;
+    width: max-content;
+    font-weight: 600;
+}
+body .feedback03 span::before {
+    content: 'Feedback';
+    font-size: 16px;
+}
+#feedback_id01 {
+    margin-right: 8px;
+}
+body .feedback-close button {
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    border: none;
+    background: #0000;
+}
+body .feedback-close button:focus {
+    outline: solid 2px #206bf5;
+}
+
+/* feedback04 */
+
+body .feedback04 {
+    padding: 8px 10px;
+}
+body .feedback04 .wave-button .ripple {
+    background-color: #377dff2c;
+}
+body .feedggo {
+    text-align: center;
+    padding: 8px 61px;
+    font-size: 15px;
+    padding-top: 20px;
+}
+body .feeddiv {
+    margin-top: 10px;
+    padding-left: 16px;
+    padding-right: 16px;
+}
+body .feeddiv input {
+    display: block;
+    width: -webkit-fill-available;
+    height: 40px;
+    margin-bottom: 10px;
+    padding: 0 16px;
+    border: solid 1px #d0d3d9;
+    border-radius: 8px;
+}
+body .feeddiv textarea {
+    width: -webkit-fill-available;
+    padding: 10px 16px;
+    border: solid 1px #d0d3d9;
+    border-radius: 8px;
+    height: 100px;
+    font-size: 15px;
+    resize: none;
+}
+body .feeddiv label {
+    user-select: none;
+    flex: auto;
+    justify-content: center;
+    margin-top: 16px;
+    height: 36px;
+    border: solid 1px #d0d3d9;
+    border-radius: 8px;
+    background: #709cff08;
+}
+body .feeddiv label:active {
+    color: #337bff;
+    box-shadow: 0 1px 2px 0 rgba(60,64,67,.3),0 1px 3px 1px rgba(60,64,67,.15);
+    border: solid 0px #d0d3d9;
+    height: 38px;
+    background-color: white;
+}
+body .feeddiv label:focus {
+    color: #337bff;
+}
+body .rr0012 {
+    cursor: pointer;
+    display: block;
+    padding: 8px 16px;
+    border-radius: 25px;
+    width: max-content;
+    background: #0000;
+    outline: none;
+    border: none;
+}
+body .rr0012:hover {
+    color: #337bff;
+}
+body .feedback_button {
+    position: fixed;
+    z-index: 10000;
+    width: 50px;
+    height: 50px;
+    justify-content: center;
+    border-radius: 60px;
+    background-color: #0000;
+    border: none;
+    left: 0;
+    bottom: 0;
+    margin: 40px;
+}
+body .feedback_button:hover {
+    background-color: #484f630e;
+}
+body .feedback_button:focus {
+    background-color: #484f631c;
+}
+#overlay0023 {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: none;
+  z-index: 999;
+}
+    </style>
     <!-- link -->
-     <link rel="stylesheet" href="style.css">
+     <!-- <link rel="stylesheet" href="style.css"> -->
     <!-- script -->
-     <script src="script.js"></script>
+     <!-- <script src="script.js"></script> -->
 </head>
 <body>
     <div class="feedback01" id="popupDiv0023">
@@ -50,6 +256,53 @@
     overlay0023.addEventListener("click", () => {
       popupDiv0023.style.display = "none";
       overlay0023.style.display = "none";
+    });
+  </script>
+
+  <script>
+        window.addEventListener("load", function () {
+        setTimeout(() => {
+            if (!window.alertOpen) {
+                initializeWaveButtons();
+            }
+        }, 100);
+
+        function initializeWaveButtons() {
+            const elements = document.querySelectorAll('.wave-button');
+
+            elements.forEach(element => {
+                let isRippleActive = false;
+
+                function createRipple(e) {
+                    if (isRippleActive) return;
+
+                    isRippleActive = true;
+
+                    const ripple = document.createElement('span');
+                    const rect = element.getBoundingClientRect();
+                    const size = Math.max(rect.width, rect.height);
+
+                    // هنا نجعلها دائمًا في المنتصف
+                    const x = rect.width / 2 - size / 2;
+                    const y = rect.height / 2 - size / 2;
+
+                    ripple.style.width = ripple.style.height = `${size}px`;
+                    ripple.style.left = `${x}px`;
+                    ripple.style.top = `${y}px`;
+                    ripple.classList.add('ripple');
+
+                    element.appendChild(ripple);
+
+                    setTimeout(() => {
+                        ripple.remove();
+                        isRippleActive = false;
+                    }, 600);
+                }
+
+                element.addEventListener('mousedown', createRipple);
+                element.addEventListener('touchstart', createRipple);
+            });
+        }
     });
   </script>
 </body>
