--- a/index.html
+++ b/index.html
@@ -219,10 +219,10 @@ body .feedback_button:focus {
     <div class="feedback01" id="popupDiv0023">
         <div class="feedback02 flex00">
             <div class="feedback03 flex00">
-                <icon id="feedback_id01" style="background-image: url(icon/feedback.svg);"></icon>
+                <icon id="feedback_id01" style="background-image: url(feedback.svg);"></icon>
                 <span></span>
             </div>
-            <div class="feedback-close"><button class="wave-button"><icon style="background-image: url(icon/close.svg);"></icon></button></div>
+            <div class="feedback-close"><button class="wave-button"><icon style="background-image: url(close.svg);"></icon></button></div>
         </div>
         <div class="feedback04">
             <div class="feedggo">👋 Welcome, I am happy to answer any questions you have or any problems you face.</div>
@@ -240,7 +240,7 @@ body .feedback_button:focus {
             <button class="rr0012 wave-button">Language</button>
         </div>    
     </div>
-    <button class="feedback_button wave-button flex00" id="showDivBtn0023"><icon style="background-image: url(icon/feedback.svg);"></icon></button>
+    <button class="feedback_button wave-button flex00" id="showDivBtn0023"><icon style="background-image: url(feedback.svg);"></icon></button>
       <div id="overlay0023"></div>
 
     <script>
